[package]
name = "mz-billing-demo"
description = "Microservice demo using Materialize to power a real-time billing usecase"
version = "0.0.0"
edition = "2021"
rust-version = "1.63.0"
publish = false

[dependencies]
anyhow = "1.0.64"
chrono = { version = "0.4.20", default-features = false, features = ["clock", "std"] }
clap = { version = "3.2.17", features = ["derive"] }
hex = "0.4.3"
mz-ore = { path = "../../src/ore", features = ["task"] }
mz-test-util = { path = "../../test/test-util" }
prost = { version = "0.11.0", features = ["no-recursion-limit"] }
prost-types = "0.11.1"
rand = "0.8.5"
rand_distr = "0.4.3"
tokio = "1.19.2"
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4"] }

[build-dependencies]
prost-build = "0.11.1"
protobuf-src = "1.0.4"
