[package]
name = "mz-billing-demo"
description = "Microservice demo using Materialize to power a real-time billing usecase"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow = "1.0.65"
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std"] }
clap = { version = "4.0.22", features = ["derive"] }
hex = "0.4.3"
mz-ore = { path = "../../src/ore", features = ["task"] }
mz-test-util = { path = "../../test/test-util" }
prost = { version = "0.11.2", features = ["no-recursion-limit"] }
prost-types = "0.11.1"
rand = "0.8.5"
rand_distr = "0.4.3"
tokio = "1.20.2"
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.2.1", features = ["v4"] }

[build-dependencies]
prost-build = "0.11.1"
protobuf-src = "1.1.0"
